# nchu-ai-introduction

./: README.md  pyproject.toml  requirements.txt  ruff.toml
latex/: .gitignore  hw1.tex
latex/goconverter/: config.json  go.mod  main.go
latex/goconverter/files/: hw3-hants.tex  hw3.tex  hw4-hants.tex  hw4.tex  hw5-hants.tex  hw5.tex
latex/hw2/: hw2.tex
latex/hw3/: hw3-hants.tex  hw3.tex
materials/: HW3_Neural Network Classification of Handwritten Digits from Scratch using NumPy.md
notebooks/: .gitignore  hw1.ipynb  hw2.ipynb  hw3.ipynb  hw4.ipynb  hw5.ipynb
